src/main/resources/formulas/_shared/values/acme-ingress-fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-acme
spec:
  ingressClassName: kong
  rules:
    - host: manager.localdomain
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: ImplementationSpecific
            backend:
              service:
                name: dummy-acme
                port:
                  number: 65535

---

apiVersion: v1
kind: Service
metadata:
  name: dummy-acme
spec:
  type: ExternalName
  externalName: 127.0.0.1
  ports:
    - protocol: TCP
      port: 65535
